# LightRAG-gui

./: .gitignore  README.md  change-journal.md  pyproject.toml  requirements.txt  test.py  test_neo4j.py
.devcontainer/: devcontainer.json
examples/: change-journal.md  lightrag_bedrock_demo.py  lightrag_hf_demo.py  lightrag_lmdeploy_demo.py  lightrag_ollama_demo.py  lightrag_openai_compatible_demo.py  lightrag_openai_demo.py  lightrag_siliconcloud_demo.py
notebooks/: streamlit-app-lightrag.py  streamlit-import-query-lightrag.py  taipy-lightrag-app.py
ui-examples/: streamlit-import-query-lightrag.py
ui-examples/design-docs/: Streamlit Chat element  tagrag-interface-spec.md
