[tool.poetry]
name = "lightrag"
version = "0.0.8"
description = "A lightweight graph retrieval augmented generation framework"
authors = ["The AI Product Guy <aiproductguy@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
accelerate = "*"
aioboto3 = "*"
aiohttp = "*"
graspologic = "*"
hnswlib = "*"
nano-vectordb = "*"
neo4j = "*"
networkx = "*"
ollama = "*"
openai = "*"
pyvis = "*"
tenacity = "*"
tiktoken = "*"
torch = "*"
transformers = "*"
xxhash = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
