[tool.poetry]
name = "lightrag-app"
version = "0.0.8"
description = "A lightweight graph retrieval augmented generation framework"
authors = ["The AI Product Guy <aiproductguy@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<3.12"
streamlit = "^1.40.0"
accelerate = "^0.25.0"
aioboto3 = "^12.1.0"
aiohttp = "^3.9.1"
graspologic = "^3.3.0"
hnswlib = "^0.8.0"
nano-vectordb = "^0.0.2"
neo4j = "^5.15.0"
networkx = "^3.2.1"
ollama = "^0.1.6"
openai = "^1.3.7"
pyvis = "^0.3.2"
tenacity = "^8.2.3"
tiktoken = "^0.8.0"
torch = "^2.1.1"
transformers = "^4.35.2"
xxhash = "^3.4.1"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
